--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
             </div>
             </div>
 
-            <button type="submit" class="btn btn-primary" id="submitButton">Sign in</button>
+            <button type="submit" class="btn btn-primary" id="submitButton">Register</button>
         </form>
 
     </div>
