--- a/public/index.html
+++ b/public/index.html
@@ -84,6 +84,16 @@
 
         </div>
 
+        <div class="form-group col-4">
+          <label for="contractType">Contract Type</label>
+          <select class="form-control" id="contractType">
+            <option>Construction</option>
+            <option>Professional Services</option>
+            <option>Goods and Services</option>
+            <option>Other</option>
+          </select>
+        </div>
+
         <button type="submit" class="btn btn-primary">Sign in</button>
       </form>
     </div>
