--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Blog - Express</title>
+  <title>Mock-up</title>
   <!-- Latest compiled and minified CSS & JS -->
   <link href="https://maxcdn.bootstrapcdn.com/bootswatch/4.0.0/flatly/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles/style.css" media="screen" title="no title">
@@ -33,7 +33,7 @@
         <!-- </div> -->
         <div class="form-group col-md-10">
           <label for="businessAddress">Business Name</label>
-          <input type="text" class="form-control" id="businessAddress" placeholder="1234 Main St">
+          <input type="text" class="form-control" id="businessName" placeholder="Business Name">
         </div>
 
         <div class="form-row col-md-12">
@@ -94,7 +94,7 @@
           </select>
         </div>
 
-        <button type="submit" class="btn btn-primary">Sign in</button>
+        <button type="submit" class="btn btn-primary" id="submitButton">Sign in</button>
       </form>
     </div>
   </div>
