--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,11 @@
 
 <body>
   <div class="container">
-    <h1>Customer Form</h1>
+    <!-- <h1>Customer Form</h1> -->
+    <div id="imageDiv">
+            <img src="./logo" alt="logo" class="text-center" id="logo"/>
+    </div>
+    
     <div id="form-container" class="row justify-content-center">
       <form>
         <!-- <div class="form-row"> -->
@@ -84,15 +88,19 @@
 
         </div>
 
-        <div class="form-group col-4">
-          <label for="contractType">Contract Type</label>
-          <select class="form-control" id="contractType">
-            <option>Construction</option>
-            <option>Professional Services</option>
-            <option>Goods and Services</option>
-            <option>Other</option>
-          </select>
+        <div class="row">
+            <div class="col-6"></div>
+                <div class="form-group col-4" id="contract">
+                        <label for="contractType">Contract Type</label>
+                        <select class="form-control" id="contractType">
+                          <option>Construction</option>
+                          <option>Professional Services</option>
+                          <option>Goods and Services</option>
+                          <option>Other</option>
+                        </select>
+                      </div>
         </div>
+
 
         <button type="submit" class="btn btn-primary" id="submitButton">Sign in</button>
       </form>
